--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
             <div class="content">
                 <h4>Pixie Studio</h4>
-                <p>App design and branding for a delivery service company.</p>
+                <p>App and branding for a delivery service company.</p>
                 <a href="#">Learn more</a>
             </div>
         </div>
